--- a/client/src/pages/styles/profile.css
+++ b/client/src/pages/styles/profile.css
@@ -26,16 +26,18 @@
 
 .profile_main > form {
   height: 100%;
+  min-height: 600px;
   display: grid;
   grid-template: 1.8fr .2fr / 1fr 1fr;
   grid-template-areas: 'bio info' 'bio buttons';
+  gap: 1rem;
 }
 
 .profile_main > form > div:nth-of-type(1) {
   /* border: .5px solid blue; */
   grid-area: info;
   justify-content: flex-start;
-  gap: 5.5rem;
+  gap: 5rem;
 }
 
 .profile_main > form > div:nth-of-type(2) {
@@ -47,14 +49,24 @@
   grid-area: buttons;
 }
 
-form textarea {
+.profile_main > form *[type=text] {
   height: 100%;
   background-color: transparent;
-  border: none;
   padding-top: 1rem;
+  border: none;
   resize: none;
+}
+
+.profile_main > form *[type=text]:focus {
+  box-shadow: rgba(112, 110, 110, 0.219) 0 0 .5rem inset;
+  padding: .3rem;
 }
 
 .profile_main > form input {
   cursor: pointer;
+}
+
+.profile_main .disabled {
+  pointer-events: none;
+  opacity: .3;
 }
