--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,6 +13,11 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+body * {
+  transition-duration: .3s;
+  transition-timing-function: cubic-bezier(0.47, 0, 0.745, 0.715);
+}
+
 html, body {
   width: 100%;
 }
