--- a/client/src/pages/styles/chat.css
+++ b/client/src/pages/styles/chat.css
@@ -1,7 +1,7 @@
 .chat-list {
   padding: 1rem;
   min-width: 250px;
-  border: .5px solid red 
+  box-shadow: rgb(0, 0, 0, 0.5) 0 0 0.5rem;
 }
 
 .chat-list > ul {
@@ -9,8 +9,8 @@
 }
 
 .chat-list > ul li {
-  padding: .5rem;
-  border: .5px solid yellow;
+  padding: 0.5rem;
+  box-shadow: rgb(0, 0, 0, 0.5) 0 0 0.5rem;
 }
 
 .chat-header {
@@ -27,19 +27,22 @@
 }
 
 .chat-main > section {
-  padding: 1rem;
-  min-height: 500px;
+  padding: 1rem 1rem 1rem 0;
+  max-height: 600px;
   min-width: 100%;
 }
 
 .chat-main > section > ul {
   gap: 0.5rem;
-  justify-content: flex-end;
+  padding: 0.5rem;
+  overflow-y: scroll;
   width: 100%;
 }
 
 .chat-main > section > ul > li {
   max-width: 300px;
+  padding: 0.2rem;
+  box-shadow: rgb(0, 0, 0, 0.5) 0 0 0.5rem;
 }
 
 .myMessage {
@@ -50,7 +53,7 @@
   height: max-content;
   padding: 0.2rem 0.2rem 0.2rem 0.5rem;
   gap: 1rem;
-  border: 0.5px solid grey;
+  box-shadow: rgb(0, 0, 0, 0.5) 0 0 0.5rem;
   border-radius: 25px;
 }
 
@@ -70,7 +73,7 @@
 
 .events {
   position: absolute;
-  border: 0.5px solid grey;
+  box-shadow: rgb(0, 0, 0, 0.5) 0 0 0.5rem;
   min-width: 400px;
   max-height: 150px;
   top: 0px;
@@ -78,7 +81,6 @@
 
   display: grid;
   grid-template: min(60px) 1fr / 1fr;
-  
 }
 .events > ul {
   display: flex;
@@ -87,6 +89,3 @@
   justify-content: flex-end;
   overflow: hidden;
 }
-
-
-
